@@ -1,3 +1,8 @@
+Sun Dec 14 18:41:20 CET 2008 Christian Anthon <anthon@kiku.dk>
+
+	* import.c: issue warning when importing matchfiles with length >
+	MAXSCORE
+
 Sun Dec 14 11:12:45 2008 Jon Kinsey <Jon_Kinsey@hotmail.com>
 
 	* play.c: Sort out "stop" button for "end game" and gnubg vs gnubg.
